<resources>
    <string name="app_name">KSU Moves</string>
    <string name="ksu">Kennesaw State University</string>
    <string name="activites_email">techSupport@adnap.co</string>
    <string name="facebook_app_id">1637617026542043</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- nav categories -->
    <string name="greek">Greek</string>
    <string name="basketball">NCAA</string>
    <string name="all">All Events</string>
    <string name="football">Football</string>
    <string name="tech">Tech</string>
    <string name="networking">Networking</string>
    <string name="academic">Academic</string>
    <string name="fun">Fun</string>
    <string name="arts">Arts</string>
    <string name="service">Service</string>
    <string name="social">Social</string>
    <string name="title_activity_showinfo">Showinfo</string>

    <!-- Login -->
    <string name="KSU_email">Enter KSU email.</string>
    <string name="login">Login</string>
    <string name="KSU_domain">students.kennesaw.edu</string>
    <string name="loading">Loading</string>
    <string name="title">The Move:KSU</string>
    <string name="register">Register</string>
    <string name="getStarted">Get Started</string>

    <!-- info shown -->
    <string name="reminder">Reminder</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_building_list">BuildingList</string>
    <string name="title_activity_web">WebActivity</string>

    <string name="banner_ad_unit_id">ca-app-pub-4066391650748754/6507739821
</string>
    <string name="title_activity_uber">Uber</string>
    <!-- Uber -->


</resources>
