<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all"
            android:icon="@drawable/calendar1"
            android:title="@string/all"/>
        <item
            android:id="@+id/basketball"
            android:icon="@drawable/sportbasketball"
            android:title="@string/basketball" />
        <item
            android:id="@+id/greek"
            android:icon="@drawable/greekcolumn"
            android:title="@string/greek" />
        <item
            android:id="@+id/networking"
            android:icon="@drawable/sharesignaluser"
            android:title="@string/networking" />
        <item
            android:id="@+id/academic"
            android:icon="@drawable/graduationhat"
            android:title="@string/academic" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
