<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.theelitelabel.schoolevents2.Login"
    android:background="@mipmap/ksuback"
    android:backgroundTint="@color/com_facebook_device_auth_text"
    android:backgroundTintMode="multiply">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/ksu_email"
        android:hint="@string/KSU_email"
        style="@style/FirebaseUI.EditText"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/ksu_domain"
        android:layout_toLeftOf="@+id/ksu_domain"
        android:maxLength="10"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView2"
        android:layout_above="@+id/ksu_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_below="@+id/ksu_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        style="@style/FirebaseUI.Button.NextButton"
        android:backgroundTint="@color/ksu_black"
        android:textColor="@color/ksu_yellow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/KSU_domain"
        android:id="@+id/ksu_domain"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white" />

</RelativeLayout>
